syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.flydubai";

message HelloRequest{
    string clientName=1;
}

message HelloReply{
    string message=1;
}

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply);
}